Theme updated: correcting a small z-index bug between admin menu and carousel.

--- a/profiles/rouergue/themes/custom/rouergue_bootstrap/css/custom.css
+++ b/profiles/rouergue/themes/custom/rouergue_bootstrap/css/custom.css
@@ -246,7 +246,7 @@ CAROUSEL STYLES
 .carousel-indicators {
   position: absolute;
   top: -20px;
-  z-index: 1000;
+  z-index: 500;
   width: 100%;
   left:0;
   margin-left: 0;
